@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -51,15 +51,26 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
 
     private static final Logger logger = LoggerFactory.getLogger(BinaryHeaderMap.class);
 
+    static final int INITIAL_CAPACITY = 10;
+
     private CharBuffer valueBuffer;
+    /**
+     * Ordered list of keys
+     */
     private final ArrayList<String> keys;
+
+    /**
+     * Values lengths, key index is provided with {@link #keys}.
+     * Negative length indicate a {@literal null} entry
+     */
     private int[] valueLengths;
+
     private final NoGarbageIterator iterator;
 
     public BinaryHeaderMap() {
         valueBuffer = CharBuffer.allocate(64);
-        keys = new ArrayList<>(10);
-        valueLengths = new int[10];
+        keys = new ArrayList<>(INITIAL_CAPACITY);
+        valueLengths = new int[INITIAL_CAPACITY];
         iterator = new NoGarbageIterator();
     }
 
@@ -71,7 +82,13 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
         return size() == 0;
     }
 
-    public boolean add(String key, byte[] value) {
+    public boolean add(String key, @Nullable byte[] value) {
+        boolean result;
+        if (value == null) {
+            addNewEntry(key, -1);
+            return true;
+        }
+
         int valuesPos = valueBuffer.position();
         CoderResult coderResult = IOUtils.decodeUtf8Bytes(value, valueBuffer);
         while (coderResult.isOverflow()) {
@@ -81,20 +98,31 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
             }
             coderResult = IOUtils.decodeUtf8Bytes(value, valueBuffer);
         }
-        boolean result;
+
         if (coderResult.isError()) {
             ((Buffer) valueBuffer).limit(valuesPos);
             result = false;
         } else {
-            int size = keys.size();
-            keys.add(key);
-            if (size == valueLengths.length) {
-                enlargeValueLengths();
-            }
-            valueLengths[size] = valueBuffer.position() - valuesPos;
+            addNewEntry(key, valueBuffer.position() - valuesPos);
             result = true;
         }
+
         return result;
+    }
+
+    /**
+     * Adds a new entry and increase storage capacity if needed
+     *
+     * @param key         key
+     * @param valueLength value length
+     */
+    private void addNewEntry(String key, int valueLength) {
+        int size = keys.size();
+        keys.add(key);
+        if (size == valueLengths.length) {
+            enlargeValueLengths();
+        }
+        valueLengths[size] = valueLength;
     }
 
     private boolean enlargeBuffer() {
@@ -148,6 +176,7 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
         @Nullable
         String key;
         CharBuffer value = CharBuffer.allocate(64);
+        private boolean nullValue;
 
         public String getKey() {
             if (key == null) {
@@ -156,23 +185,30 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
             return key;
         }
 
+        @Nullable
         public CharSequence getValue() {
-            return value;
+            return nullValue ? null : value;
         }
 
-        void setValue(CharBuffer valueBuffer) {
-            ((Buffer) value).clear();
-            int remaining = valueBuffer.remaining();
-            if (remaining > value.capacity()) {
-                if (value.capacity() < DslJsonSerializer.MAX_VALUE_LENGTH) {
-                    enlargeBuffer();
+        void setValue(@Nullable CharBuffer valueBuffer) {
+            if (valueBuffer == null) {
+                nullValue = true;
+            } else {
+                nullValue = false;
+                ((Buffer) value).clear();
+                int remaining = valueBuffer.remaining();
+                if (remaining > value.capacity()) {
+                    if (value.capacity() < DslJsonSerializer.MAX_VALUE_LENGTH) {
+                        enlargeBuffer();
+                    }
+                    if (remaining > DslJsonSerializer.MAX_VALUE_LENGTH) {
+                        ((Buffer) valueBuffer).limit(valueBuffer.position() + DslJsonSerializer.MAX_VALUE_LENGTH);
+                    }
                 }
-                if (remaining > DslJsonSerializer.MAX_VALUE_LENGTH) {
-                    ((Buffer) valueBuffer).limit(valueBuffer.position() + DslJsonSerializer.MAX_VALUE_LENGTH);
-                }
+                value.put(valueBuffer);
+                ((Buffer) value).flip();
             }
-            value.put(valueBuffer);
-            ((Buffer) value).flip();
+
         }
 
         void reset() {
@@ -202,11 +238,18 @@ public class BinaryHeaderMap implements Recyclable, Iterable<BinaryHeaderMap.Ent
         public Entry next() {
             entry.reset();
             entry.key = keys.get(index);
-            int thisValueOffset = nextValueOffset;
-            nextValueOffset += valueLengths[index];
-            ((Buffer) valueBuffer).limit(nextValueOffset);
-            ((Buffer) valueBuffer).position(thisValueOffset);
-            entry.setValue(valueBuffer);
+            int valueLength = valueLengths[index];
+
+            if(valueLength < 0){
+                entry.setValue(null);
+            } else {
+                int thisValueOffset = nextValueOffset;
+                nextValueOffset += valueLengths[index];
+                ((Buffer) valueBuffer).limit(nextValueOffset);
+                ((Buffer) valueBuffer).position(thisValueOffset);
+                entry.setValue(valueBuffer);
+            }
+
             index++;
             return entry;
         }
